...
///
/// ```dart
/// class CounterApp extends NativeUIApp {
///   int count = 0;
///
///   @override
///   void init() => on('increment', (_) => setState(() => count++));
///
///   @override
///   WidgetNode build() => UIBuilder.scaffold(
///         appBar: UIBuilder.appBar(title: 'Counter'),
///         body: UIBuilder.center(child: UIBuilder.text('Count: $count')),
///         floatingActionButton: UIBuilder.floatingActionButton(
///           tooltip: 'Increment',
///           eventId: 'increment',
///         ),
///       );
...
